fix: compare staged semantic release parity